# py-shopen

./: .editorconfig  .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: CI.yml  tests.yml
src/shopen/: __init__.py  open.py
tests/: __init__.py  conftest.py  test_edit.py  test_open.py  test_ops.py  testutil.py
